[package]
name = "hibiki"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["full"]}
twilight-http = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-gateway = "0.16.0-rc.1"
dotenvy = "0.15.7"
vesper = { git = "https://github.com/AlvaroMS25/vesper", branch = "next" }